--- a/contactes.html
+++ b/contactes.html
@@ -68,7 +68,7 @@
 <div class="formulaire">
             <label for="nom" id="label">Nom</label>
             <input type="text" placeholder="Entrez votre Nom" id="nom" name="username" required>
-<input type="hidden" name="_next" value="https://github.com/Projetndagano/formsubmit.co/merci.html">
+<input type="hidden" name="_next" value="https://projetndagano.github.io/thansk/merci.html">
 <input type="hidden" name="_captcha" value="false">
             <br>
 
